k8s/public-api.yaml

## SERVICE ##
apiVersion: v1
kind: Service
metadata:
  name: public-api-service
spec:
  selector:
    app: public-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---

## DEPLOYMENT ##
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: public-api
  template:
    metadata:
      labels:
        app: public-api
    spec:
      containers:
      - name: public-api-container
        image: melvincerba/public-api-service-prod:latest
        ports:
        - containerPort: 5000
        command: ["gunicorn"]
        args: ["-b", "0.0.0.0:5000", "index:app"]
