k8s/voice-recognition.yaml

## SERVICE ##
apiVersion: v1
kind: Service
metadata:
  name: voice-recognition-service
spec:
  selector:
    app: voice-recognition
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
    
---

## DEPLOYMENT ##
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voice-recognition-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: voice-recognition
  template:
    metadata:
      labels:
        app: voice-recognition
    spec:
      containers:
      - name: voice-recognition-container
        image: melvincerba/voice-recognition-service-prod:0.0.2
        ports:
        - containerPort: 5000
        command: ["/usr/local/bin/gunicorn"]
        args: ["-b", "0.0.0.0:5000", "index:app"]
